--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -82,7 +82,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1803394'>Job Application for Senior iOS Engineer - Singapore Based at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -144,7 +144,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/ffe59452-b9d8-4a4d-98e0-835b11db268c'>Xfers - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/ffe59452-b9d8-4a4d-98e0-835b11db268c'>Xfers - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -179,7 +179,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/442749-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/442749-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -218,7 +218,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697451753-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697451753-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -226,7 +226,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -252,7 +252,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Paris  Paris Berlin</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/zIbLccdNpv/IOS-Senior-Engineer'>iOS Senior Engineer - ProximityCR - Career Page</a></h5> 
+<h5><a href='http://proximity.applytojob.com/apply/zIbLccdNpv/IOS-Senior-Engineer'>iOS Senior Engineer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -264,7 +264,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wolt/14620336-d6f2-4703-8478-8d70385cd853'>Wolt - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wolt/14620336-d6f2-4703-8478-8d70385cd853'>Wolt - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -353,7 +353,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Washington---Bellevue/iOS-Software-Engineer_R-47526'>iOS Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Washington---Bellevue/iOS-Software-Engineer_R-47526'>iOS Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Egencia. Launched in 2002 as Expedia Corporate Travel, Egencia has become 
 the fourth largest Travel Management Company in the world because of our?...</p>
@@ -449,7 +449,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
