--- a/software.html
+++ b/software.html
@@ -39,31 +39,47 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938642'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938653'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938660'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938673'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/kaleidoscope/job/osnqbfwa'>Kaleidoscope Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446395-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446395-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698445452-staff-software-engineer'>Visa Staff Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446388-senior-software-engineer'>Visa Senior Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999698444733-intern-software-developer'>Leidos Intern Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne Australia  Australia Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oF6sbfw8&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=n8kaoMwh'>NICE inContact Careers - Specialist Software Engineer Java &amp; AWS</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -103,7 +119,7 @@
 <p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440924-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440924-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -115,11 +131,11 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oWnUafw7&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nNa8nMwJ'>Schneider Electric NAM Careers - Software Engineering Manager - Embedded Firmware</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oWnUafw7&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nNa8nMwJ'>Schneider Electric NAM Careers - Software Engineering Manager - Embedded Firmware</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hayessoft.applytojob.com/apply/G6iQKwBzbe/Software-Engineer'>Software Engineer - Hayes Software Systems - Career Page</a></h5> 
+<h5><a href='http://hayessoft.applytojob.com/apply/G6iQKwBzbe/Software-Engineer'>Software Engineer - Hayes Software Systems - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -177,7 +193,7 @@
 <p><span class="badge badge-light">Vancouver, BC  Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -231,7 +247,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
+<h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -259,7 +275,7 @@
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -279,7 +295,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -357,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/percona/8dde575c-be09-4d78-a70c-239787ded810'>Percona - Backend Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/percona/8dde575c-be09-4d78-a70c-239787ded810'>Percona - Backend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -365,7 +381,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -373,7 +389,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -381,11 +397,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ovt/job/ozipbfwb'>Omnivision Technologies, Inc Careers - Applications Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ovt/job/ozipbfwb'>Omnivision Technologies, Inc Careers - Applications Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -405,7 +421,7 @@
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -427,22 +443,6 @@
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/sundial/job/mbxktf7z6c44pbty3tbedtx1zh'>.NET Software Engineer 3 (16287) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=ojDUafwK&__jvst=Employee&__jvsd=s8Ischwg&__jvsc=Twitter&bid=n2dBnMwu'>New Relic Careers - Senior Software Engineer - Javascript</a></h5> 
-<p><span class="badge badge-light">Barcelona, Spain</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/zynga/job/oLjpbfwo'>Zynga Careers - Senior Software Engineer - Words With Friends</a></h5> 
-<p><span class="badge badge-light">Toronto, Canada</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/ayla-networks/job/ooRlbfwv'>Ayla Networks Careers - Senior Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light">Bangalore, India</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/ayla-networks/job/oyRlbfwF'>Ayla Networks Careers - Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
